--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,28 +38,28 @@ jobs:
       - name: 🔬 Lint
         run: npm run lint
 
-#  typecheck:
-#    name: ʦ TypeScript
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: 🛑 Cancel Previous Runs
-#        uses: styfle/cancel-workflow-action@0.11.0
-#
-#      - name: ⬇️ Checkout repo
-#        uses: actions/checkout@v3
-#
-#      - name: ⎔ Setup node
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 16
-#
-#      - name: 📥 Download deps
-#        uses: bahmutov/npm-install@v1
-#        with:
-#          useLockFile: false
-#
-#      - name: 🔎 Type check
-#        run: npm run typecheck --if-present
+  typecheck:
+    name: ʦ TypeScript
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.11.0
+
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
+
+      - name: 🔎 Type check
+        run: npm run typecheck --if-present
 
   vitest:
     name: ⚡ Vitest
@@ -119,7 +119,7 @@ jobs:
           PORT: "8811"
 
   deploy:
-    needs: [lint, vitest, cypress]
+    needs: [lint, typecheck, vitest, cypress]
     runs-on: ubuntu-latest
 
     steps:
